Finish challenge with results in comments